# loading_motor_dt

./: .gitmodules  README.md
ISEAUTO_UNITY/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  ISEAUTO.sln
ISEAUTO_UNITY/Assets/: ISEAUTO_MotorData_Simple.cs  MotorController.cs  QS132M_B3_ (1).prefab  QS132M_B3_ (1)_0.asset  QS132M_B3_ (1)_1.asset  QS132M_B3_ (1)_10.asset  QS132M_B3_ (1)_11.asset  QS132M_B3_ (1)_2.asset  QS132M_B3_ (1)_3.asset  QS132M_B3_ (1)_4.asset  QS132M_B3_ (1)_5.asset  QS132M_B3_ (1)_6.asset  QS132M_B3_ (1)_7.asset  QS132M_B3_ (1)_8.asset  QS132M_B3_ (1)_9.asset  RunEncoder.cs  ScreenSpaceFollower.cs  body.prefab  deom.unity  motor buddy.STL  motor buddy_0.asset  motor cage.STL  motor cage.prefab  motor cage_0.asset
ISEAUTO_UNITY/Assets/Dashes/: Feedback Signal.prefab  LinePrefab.prefab  MovingLinePrefab.prefab  cONTROL.prefab  command signal.prefab
ISEAUTO_UNITY/Assets/Line/: LineGenerator.cs  LineProto.cs  MovingEmitterTag.cs  MovingLineHandler.cs  MovingLineSpawner.cs  MovingReceiverTag.cs  Scaler.cs  Shifter.cs
ISEAUTO_UNITY/Assets/Materials/: Cage.mat  Command Signal.mat  Controller.mat  Default.mat  Feedback Signal.mat  Feedback.mat  MOTOR.mat  cONTROL.mat  ros server.mat
ISEAUTO_UNITY/Assets/Scripts/ROS/: Bridge.cs  Frame.cs  Message.cs  Publisher.cs  ServiceConsumer.cs  Subscriber.cs
ISEAUTO_UNITY/Assets/Scripts/Setup/: BumpyTrack.cs  Sawtooth.cs  Settings.cs  Setup.cs
ISEAUTO_UNITY/Assets/Scripts/Tracked Vehicle Controller/: CommandInput.cs  (+9 more)
ISEAUTO_UNITY/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
iseauto/: PMSynRM.csv
iseauto/src/: CMakeLists.txt
iseauto/src/ecu/: CMakeLists.txt  package.xml
iseauto/src/ecu/launch/: run.launch
iseauto/src/ecu/src/: Controller.cpp  EfficiencyMap.cpp
(+61 files in other folders)
